--- a/style.css
+++ b/style.css
@@ -4,3 +4,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 
+body {
+    background-color: #f3e6d8;
+}
+
+.card {
+    background-color: #fff;
+    max-width: 100%;
+    border-radius: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px;
+}
