--- a/style.css
+++ b/style.css
@@ -10,10 +10,59 @@ body {
 
 .card {
     background-color: #fff;
-    max-width: 100%;
+    max-width: 750px;
     border-radius: 20px;
-    text-align: center;
+    text-align: left;
     margin-left: auto;
     margin-right: auto;
     padding: 40px;
 }
+
+.card img {
+    max-width: 100%;
+    max-height: 100%;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+}
+
+.card h1 {
+    font-family: 'Young Serif';
+}
+
+.card p {
+    font-family: 'Outfit';
+    font-weight: 400;
+    font-size: 16px;
+}
+
+li, td {
+    margin-bottom: 10px;
+    margin-right: 15px;
+    font-family: 'Outfit';
+    font-weight: 400;
+    font-size: 14px;
+}
+
+#prep {
+    background-color: #fff5fa;
+    max-width: 100%;
+    border-radius: 20px;
+    text-align: left;
+    padding: 10px;
+}
+
+#prep h3 {
+    font-family: 'Outfit';
+    font-weight: 700;
+    font-size: 18px;
+    color: #7b284f;
+}
+
+h2 {
+    font-family: 'Young Serif';
+    font-weight: 500;
+    color: #854632;
+}
+
