--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
     padding: 40px;
 }
 
+.card hr {
+    border-color: #e4ded8;
+}
+
 .card img {
     max-width: 100%;
     max-height: 100%;
@@ -35,6 +39,12 @@ body {
     font-family: 'Outfit';
     font-weight: 400;
     font-size: 16px;
+}
+
+h2 {
+    font-family: 'Young Serif';
+    font-weight: 500;
+    color: #854632;
 }
 
 li, td {
@@ -60,9 +70,5 @@ li, td {
     color: #7b284f;
 }
 
-h2 {
-    font-family: 'Young Serif';
-    font-weight: 500;
-    color: #854632;
-}
+
 
