--- a/style.css
+++ b/style.css
@@ -6,16 +6,21 @@
 
 body {
     background-color: #f3e6d8;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10vh;
 }
 
 .card {
     background-color: #fff;
-    max-width: 750px;
+    max-width: 650px;
     border-radius: 20px;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
-    padding: 40px;
+    padding: 50px;
 }
 
 .card img {
@@ -29,6 +34,8 @@ body {
 
 .card h1 {
     font-family: 'Young Serif';
+    font-size: 40px;
+    font-weight: 400;
 }
 
 .card p {
@@ -36,6 +43,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #4f4e4d;
+    margin-bottom: 30px;
 }
 
 hr {
@@ -72,6 +80,11 @@ ol li{
     padding-left: 12px;
 }
 
+ul li::marker {
+    color: #854632;
+    list-style-type: square;
+}
+
 ol li::marker {
     color: #854632;
     font-weight: 700;
@@ -83,6 +96,7 @@ ol li::marker {
     border-radius: 20px;
     text-align: left;
     padding: 10px;
+    padding-left: 30px;
 }
 
 #prep h3 {
