--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ ol li{
 
 ul li::marker {
     color: #854632;
-    list-style-type: square;
 }
 
 ol li::marker {
@@ -95,7 +94,7 @@ ol li::marker {
     max-width: 100%;
     border-radius: 20px;
     text-align: left;
-    padding: 10px;
+    padding: 5px;
     padding-left: 30px;
 }
 
@@ -114,6 +113,7 @@ ol li::marker {
 .nutrition p {
     flex: 1;
     margin: 8px 0;
+    padding-left: 20px;
 }
 
 .nutrition #num {
